--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,24 @@ android {
         applicationId "com.nikolaykul.waveadvance"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+
+        // Generate versionCode and versionName. Print them as well
+        def longVersionName = "git -C ${projectDir} describe --tags --long".execute().text.trim()
+        if (longVersionName) {
+            def (fullVersionTag, versionBuild, gitSha) = longVersionName.tokenize('-')
+            def (versionMajor, versionMinor, versionPatch) = fullVersionTag.tokenize('.')
+            versionName "$versionMajor.$versionMinor.$versionPatch"
+            versionCode versionMajor.toInteger() * 10000000 +
+                    versionMinor.toInteger() * 100000 +
+                    versionPatch.toInteger() * 1000 +
+                    versionBuild.toInteger()
+        } else {
+            versionName "1.0.0"
+            versionCode 10000000
+        }
+
+        printf("\n--------VERSION DATA--------\n- CODE: " + versionCode +
+                "\n- NAME: " + versionName + "\n----------------------------\n")
     }
     buildTypes {
         release {
