--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,25 @@ android {
                 "\n- NAME: " + versionName + "\n----------------------------\n")
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+        }
+        release {
+            debuggable false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    productFlavors {
+        def APP_NAME = "Wave Advance"
+        dev {
+            applicationIdSuffix ".dev"
+            buildConfigField 'boolean', 'ENABLE_LOGGING', 'true'
+            resValue "string", "app_name", APP_NAME + " Develop"
+        }
+        prod {
+            buildConfigField 'boolean', 'ENABLE_LOGGING', 'false'
+            resValue "string", "app_name", APP_NAME
         }
     }
 }
