--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    // App
+    compile 'com.annimon:stream:1.0.9'
     compile 'com.android.support:appcompat-v7:23.3.0'
+
+    // Test
+    testCompile 'junit:junit:4.12'
 }
 
 // Task -> Obtain signingConfigs.release data from 'signing.properties' file
