--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     // App
     compile 'com.annimon:stream:1.0.9'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.jakewharton.timber:timber:3.1.0'
 
     // Test
     testCompile 'junit:junit:4.12'
