--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.jakewharton.timber:timber:3.1.0'
 
+    // Rx
+    compile "io.reactivex:rxandroid:1.2.0"
+    compile "io.reactivex:rxjava:1.1.5"
+
     // Test
     testCompile 'junit:junit:4.12'
 }
