--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -73,6 +74,10 @@ android {
 }
 
 dependencies {
+    final DAGGER_VERSION = '2.2'
+
+    def daggerCompiler = "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+
     // App
     compile 'com.annimon:stream:1.0.9'
     compile 'com.android.support:appcompat-v7:23.3.0'
@@ -82,8 +87,16 @@ dependencies {
     compile "io.reactivex:rxandroid:1.2.0"
     compile "io.reactivex:rxjava:1.1.5"
 
+    // Dagger 2
+    compile "com.google.dagger:dagger:$DAGGER_VERSION"
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
     // Test
     testCompile 'junit:junit:4.12'
+
+    // Apt
+    apt daggerCompiler
+    testApt daggerCompiler
 }
 
 // Task -> Obtain signingConfigs.release data from 'signing.properties' file
