--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         // Generate versionCode and versionName. Print them as well
         def longVersionName = "git -C ${projectDir} describe --tags --long".execute().text.trim()
         if (longVersionName) {
+            //noinspection GroovyUnusedAssignment
             def (fullVersionTag, versionBuild, gitSha) = longVersionName.tokenize('-')
             def (versionMajor, versionMinor, versionPatch) = fullVersionTag.tokenize('.')
             versionName "$versionMajor.$versionMinor.$versionPatch"
