--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,12 +76,14 @@ android {
 
 dependencies {
     final DAGGER_VERSION = '2.2'
+    final APPCOMPAT_VERSION = '23.3.0'
 
     def daggerCompiler = "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
     // App
+    compile "com.android.support:appcompat-v7:$APPCOMPAT_VERSION"
+    compile "com.android.support:design:$APPCOMPAT_VERSION"
     compile 'com.annimon:stream:1.0.9'
-    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.jakewharton.timber:timber:3.1.0'
 
     // Material
